Fix navbar spacing

--- a/.living-api/theme/css/Navbar.css
+++ b/.living-api/theme/css/Navbar.css
@@ -1,5 +1,5 @@
 .ld-Navbar {
-  padding: 0.7rem 1.5rem;
+  padding: 0.7rem 1rem;
   background: #000;
   color: #fff;
   height: 56px;
